WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196468
WebSocketHandshake should not know about a Document
https://bugs.webkit.org/show_bug.cgi?id=196468
Summary
WebSocketHandshake should not know about a Document
Alex Christensen
Reported
2019-04-01 15:26:33 PDT
WebSocketHandshake should not know about a Document
Attachments
Patch
(14.42 KB, patch)
2019-04-01 15:30 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-04-01 15:30:13 PDT
Created
attachment 366430
[details]
Patch
Alex Christensen
Comment 2
2019-04-17 11:50:09 PDT
http://trac.webkit.org/r244391
Radar WebKit Bug Importer
Comment 3
2019-04-17 11:52:11 PDT
<
rdar://problem/49986136
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug