Source/WebCore/Modules/websockets/WebSocketChannel.h
@@ -117,13 +117,15 @@ public:
 
     unsigned identifier() const { return m_identifier; }
     bool hasCreatedHandshake() { return !!m_handshake; }
-    ResourceRequest clientHandshakeRequest();
+    ResourceRequest clientHandshakeRequest(Function<String(const URL&)>&& cookieRequestHeaderFieldValue);
     const ResourceResponse& serverHandshakeResponse() const;
     WebSocketHandshake::Mode handshakeMode() const;
 
     using RefCounted<WebSocketChannel>::ref;
     using RefCounted<WebSocketChannel>::deref;
 
+    Document* document() { return m_document.get(); }
+    
 protected:
     void refThreadableWebSocketChannel() override { ref(); }
     void derefThreadableWebSocketChannel() override { deref(); }
@@ -203,6 +205,7 @@ private:
     bool m_suspended { false };
     bool m_closing { false };
     bool m_receivedClosingHandshake { false };
+    bool m_allowCookies { true };
     Timer m_closingTimer;
     bool m_closed { false };
     bool m_shouldDiscardReceivedData { false };
