Source/WebCore/Modules/websockets/WebSocketHandshake.h
@@ -40,7 +40,6 @@
 
 namespace WebCore {
 
-class Document;
 class ResourceRequest;
 
 class WebSocketHandshake {
@@ -49,7 +48,7 @@ public:
     enum Mode {
         Incomplete, Normal, Failed, Connected
     };
-    WebSocketHandshake(const URL&, const String& protocol, Document*, bool allowCookies);
+    WebSocketHandshake(const URL&, const String& protocol, const String& userAgent, const String& clientOrigin, bool allowCookies);
     ~WebSocketHandshake();
 
     const URL& url() const;
@@ -62,15 +61,12 @@ public:
 
     bool secure() const;
 
-    String clientOrigin() const;
     String clientLocation() const;
 
     CString clientHandshakeMessage() const;
-    ResourceRequest clientHandshakeRequest() const;
-    Optional<CookieRequestHeaderFieldProxy> clientHandshakeCookieRequestHeaderFieldProxy() const;
+    ResourceRequest clientHandshakeRequest(Function<String(const URL&)>&& cookieRequestHeaderFieldValue) const;
 
     void reset();
-    void clearDocument();
 
     int readServerHandshake(const char* header, size_t len);
     Mode mode() const;
@@ -101,9 +97,10 @@ private:
     URL m_url;
     String m_clientProtocol;
     bool m_secure;
-    WeakPtr<Document> m_document;
 
     Mode m_mode;
+    String m_userAgent;
+    String m_clientOrigin;
     bool m_allowCookies;
 
     ResourceResponse m_serverHandshakeResponse;
